--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
   </head>
   <body>
     <div>
+      <h4>Encontrados : <span class="cantidad"></span></h4>
       <ul class="prueba"></ul>
     </div>
-    <script src="/assets/js/script.js" type="module"></script>
+
+     <script src="/assets/js/script.js" type="module"></script>
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
