--- a/index.html
+++ b/index.html
@@ -15,17 +15,34 @@
     <title>Desafio Arreglos</title>
   </head>
   <body>
+    <section class="container">
+      <div class="min"></div>
+      <div class="max"></div>
+      <div class="container-search">
+        <input id="habitaciones" type="text">
+        <input id="min" type="text">
+        <input id="max" type="text">
+        <button onclick="saludar()">Click me</button>
+      </div>
+      <div class="container-realState">
+        <h4>Encontrados : <span class="cantidad"></span></h4>
+        <ul class="prueba"></ul>
+      </div>
+    
+    </section>
     <div>
       <h4>Encontrados : <span class="cantidad"></span></h4>
       <ul class="prueba"></ul>
     </div>
 
-     <script src="/assets/js/script.js" type="module"></script>
+    
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
+    <script src="./assets/js/script.js" type="module"></script>
+   
   </body>
 </html>
