--- a/index.html
+++ b/index.html
@@ -1,48 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- CSS only -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="/assets/css/style.css" />
-    <title>Desafio Arreglos</title>
-  </head>
-  <body>
-    <section class="container">
-      <div class="min"></div>
-      <div class="max"></div>
-      <div class="container-search">
-        <input id="habitaciones" type="text">
-        <input id="min" type="text">
-        <input id="max" type="text">
-        <button onclick="saludar()">Click me</button>
-      </div>
-      <div class="container-realState">
-        <h4>Encontrados : <span class="cantidad"></span></h4>
-        <ul class="prueba"></ul>
-      </div>
-    
-    </section>
-    <div>
-      <h4>Encontrados : <span class="cantidad"></span></h4>
-      <ul class="prueba"></ul>
-    </div>
-
-    
-    <!-- JavaScript Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-      crossorigin="anonymous"
-    ></script>
-    <script src="./assets/js/script.js" type="module"></script>
-   
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <title>Desafio Arreglos y Ciclos </title>
+</head>
+<body>
+  <div class="container-realstate">
+    <div class="container-result"></div>
+  </div>
+  <button onclick="saludar()">Saludar</button>
+  <script src="/assets/js/script.js"></script>
+  <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+</body>
 </html>
