feat : function buscarPropiedadPorMetroCuadrado()

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
   <div class="container-realstate">
     <div class="container-result"></div>
   </div>
-  <button onclick="saludar()">Saludar</button>
+  <div class="container-search">
+    <div class="container-input">
+      <input type="text" class="min" placeholder="minimo" >
+      <input type="text" class="max" placeholder="maximo">
+    </div>
+    <button onclick="buscarPropiedadPorMetroCuadrado()">Saludar</button>
+  </div>
+  
   <script src="/assets/js/script.js"></script>
   <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
