--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 
     <section id="Propiedades">
-        <h4 class="py-3">Total: <span>0</span></h4>
+        <h4 class="py-3">Total: <span class="contador">0</span></h4>
 
         <div class="propiedades">
             
