--- a/index.html
+++ b/index.html
@@ -1,50 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/estilos.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Desafio Arreglos</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
+    <link rel="stylesheet" href="assets/css/estilos.css" />
 </head>
 
 <body>
+    <nav class="navbar bg-light">
+        <div class="container-fluid">
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Nº Habitaciones" aria-label="Search">
+            <input class="form-control me-2" type="search" placeholder="Min" aria-label="Search">
+            <input class="form-control me-2" type="search" placeholder="Max" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Buscar</button>
+          </form>
+        </div>
+      </nav>
 
-    <nav>
+      <section class="container">
+        <div class="container-header"> <h1>texto</h1></div>
+      </section>
+
+    <!-- <nav>
         <section>
             <div>
-                <p>Cantidad de cuartos:</p> <input min="0" class="form-control w-50 m-auto rooms" type="number">
+                <p>Cantidad de cuartos:</p>
+                <input min="0" class="form-control w-50 m-auto rooms" type="number" />
             </div>
             <div>
                 <span>Metros cuadrados </span>
                 <div class="d-flex">
                     <div class="me-4">
-                        <p>desde: </p><input min="0" class="form-control min " type="number">
+                        <p>desde:</p>
+                        <input min="0" class="form-control min" type="number" />
                     </div>
                     <div>
-                        <p> hasta:</p>
-                        <input min="0" class="form-control max " type="number">
+                        <p>hasta:</p>
+                        <input min="0" class="form-control max" type="number" />
                     </div>
                 </div>
             </div>
         </section>
 
-        <button class="btn btn-warning " onclick="buscarPropiedadPorMetroCuadrado()">Buscar</button>
+        <button class="btn btn-warning" onclick="buscarPropiedadPorMetroCuadrado()">
+            Buscar
+        </button>
     </nav>
-
 
     <section id="Propiedades">
         <h4 class="py-3">Total: <span class="contador">0</span></h4>
 
-        <div class="propiedades">
-            
-        </div>
-    </section>
-
-    <script src="assets/js/script.js"></script> 
+        <div class="propiedades"></div>
+    </section> -->
+    <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script src="assets/js/script.js"></script>
 </body>
-
 </html>
