--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             
             <nav class="search">
                 <div class="container-fluid">
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="number" placeholder="Min" />
-                        <input class="form-control me-2" type="number" placeholder="Max" />
-                        <input class="form-control me-2" type="number" placeholder="Rooms" />
-                        <button class="btn btn-primary" type="submit">Buscar</button>
-                    </form>
+                    <div class="d-flex" role="search">
+                        <input class="form-control me-2 min" type="number" placeholder="Min" />
+                        <input class="form-control me-2 max" type="number" placeholder="Max" />
+                        <input class="form-control me-2 rooms" type="number" placeholder="Rooms" />
+                        <button class="btn btn-primary" id="botonEnviar" type="submit" onclick="cargaDatosPropiedades()">Buscar</button>
+                    </div>
                 </div>
             </nav>
             <div class="search-contador"><h5>Resultados</h5><h5 class="contador"></h5></div>
@@ -38,6 +38,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
-    <script src="assets/js/script.js"></script>
+ 
+        <script src="/assets/js/script.js"></script>
 </body>
 </html>
